Fix alignments.

--- a/webapp/src/app/about-me/about-me.component.scss
+++ b/webapp/src/app/about-me/about-me.component.scss
@@ -1,3 +1,7 @@
+:host {
+  text-align: justify;
+}
+
 @media only screen and (min-device-width: 800px) {
   img {
     vertical-align: top;
